# elite-reasoning-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  autonomous_loop.py  config.json  docker-compose.yml  install.ps1  install.sh  pyproject.toml  run_sync_server.sh  stress_test_loop.py  team-memory.json  test_quality_gate.py  test_team_sync.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  publish.yml
_archive/broken/: cli.py  stress_test.py  stress_test_tools.py  test_auto_creator.py  test_evaluation.py  test_graph.py  test_mcp_integration.py  test_native_tools.py  test_registry_paths.py
_archive/dormant/: app_state.py
_archive/dormant/assistance/: guide.py
_archive/dormant/diagnostics/: exporter.py  ide_bridge.py
_archive/dormant/identity/: preflight.py  soul.py
_archive/dormant/integration/: cli.py
_archive/dormant/memory/: consolidator.py  manager.py  retrieval.py
_archive/dormant/persistence/: file_store.py  recovery.py  store.py  vector_store.py
_archive/dormant/privacy/: vault.py
_archive/dormant/prompts/: dspy_modules.py
_archive/dormant/reasoning/: data_integrity.py  elite_framework.py  fmea.py  math_engine.py
_archive/dormant/skills/: auto_creator.py  executor.py  mcp_registry.py  registry.py
_archive/dormant/swarm/: memory_bridge.py  supervisor.py  workers.py
_archive/dormant/telemetry/: evaluator.py
_archive/dormant/ui/: notifier.py
_archive/dormant/watchdog/: heartbeat.py  self_healer.py
app/: cli.py  config.py  main.py
brain_central/: elite.db-shm  elite.db-wal
core/: logging_config.py
core/eval/: __init__.py  harness.py
core/identity/: user_profile.py
core/integration/: mcp_server.py  memory_bridge.py  middleware_setup.py  sync_server.py
core/learning/: __init__.py  injection_optimizer.py  rule_lifecycle.py  severity_inference.py  trigger_learner.py
core/memory/: connection_pool.py  embedding.py  graph_store.py  hybrid_search.py  integrity.py  persistent_store.py  temporal_confidence.py
core/middleware/: __init__.py  base.py  chain.py  fallback.py  injection.py  prevention.py  telemetry.py
core/orchestration/: ide_instructions.md  langgraph_nodes.py
core/scheduler/: __init__.py  optimizer.py
core/tools/: adaptive.py  analysis.py  auditing.py  error_boundary.py  graph_tools.py  native_tools.py  orchestration.py  planning.py  reasoning_amplifier.py  registry.py  verb_tools.py
docs/: ARCHITECTURE.md  TOOLS.md
examples/: README.md
schemas/: adopt_vs_build.json  after_action_review.json  analyze_prompt_sequence.json  archive_goal.json  assess_confidence.json  autonomous_scan.json  bayesian_update.json  benchmark_track.json  bias_scan.json  browse_tool_usage.json  calculate_expected_value.json  calibration_predict.json  calibration_resolve.json  calibration_score.json  check_anti_patterns.json  check_goals.json  compound_growth.json  decision_council_review.json  delete_goal.json  delete_prevention_rule.json  five_whys.json  fmea_analysis.json  fmea_risk_gate.json  generate_autonomous_goals.json  get_autonomous_status.json  get_elite_workflow.json  get_quality_trend.json  get_tool_usage_stats.json  get_user_profile.json  get_user_thinking_model.json  ingest_context.json  instructions.md  list_prevention_rules.json  list_team_users.json  memory_search_context.json  memory_sync_decisions.json  memory_sync_mistakes.json  memory_sync_rules.json  orchestrate_request_tool.json  pre_commit_audit.json  (+27 more)
scripts/: backtest_watchdog.py  bootstrap.py  compile_dspy.py  export_diagnostic.py  optimize_reasoning.py  run_elite_mcp.bat  run_elite_mcp.sh
telemetry-ui/: package-lock.json  package.json
telemetry-ui/src/app/actions/: db.ts
telemetry-ui/src/components/: Dashboard.tsx
templates/.github/workflows/: elite-quality.yml
tests/: test_adaptive_learning.py  test_core.py  test_error_boundary.py  test_graph_store.py  test_persistent_store.py
