[project]
name = "elite-reasoning-mcp"
version = "1.1.2"
description = "Elite IDE Augmentation Layer — MCP Server for persistent memory, structured reasoning, and quality enforcement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.2",
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
vectors = [
    "sqlite-vec>=0.1.9",
    "sentence-transformers>=3.0.0",
]
graph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "networkx>=3.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]
all = [
    "elite-reasoning-mcp[vectors,graph,dev]",
]

[project.scripts]
elite-reasoning-mcp = "core.integration.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.hatch.build.targets.sdist]
exclude = [
    "brain/",
    "_archive/",
    "uv.lock",
    "*.db",
    "*.log",
    "mcp_error.log",
    ".venv/",
    "__pycache__/",
    "*.pyc",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line-too-long — handled by formatter, not blocker
    "E701",   # multiple-statements-on-one-line — compact patterns
    "E702",   # multiple-statements-on-one-line-semicolon
    "E741",   # ambiguous-variable-name — l, O, I in math code
    "W291",   # trailing-whitespace
    "W293",   # blank-line-with-whitespace
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841", "E402"]  # tests use inline imports and temp vars

