[project]
name = "elite-reasoning-mcp"
version = "1.1.3"
description = "73-tool MCP server that makes any LLM think harder, reason better, and never repeat mistakes. Persistent memory, anti-pattern detection, confidence calibration, and self-improving prevention rules."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sneh Gabani", email = "snehgabani@gmail.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "mcp-server",
    "reasoning",
    "ai-agent",
    "llm",
    "memory",
    "anti-pattern",
    "decision-making",
    "confidence-calibration",
    "knowledge-graph",
    "cursor",
    "vscode",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.27.2",
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/Snehgabani/elite-reasoning-mcp"
Repository = "https://github.com/Snehgabani/elite-reasoning-mcp"
Documentation = "https://github.com/Snehgabani/elite-reasoning-mcp#readme"
"Bug Tracker" = "https://github.com/Snehgabani/elite-reasoning-mcp/issues"
Changelog = "https://github.com/Snehgabani/elite-reasoning-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
vectors = [
    "sqlite-vec>=0.1.9",
    "sentence-transformers>=3.0.0",
]
graph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "networkx>=3.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]
all = [
    "elite-reasoning-mcp[vectors,graph,dev]",
]

[project.scripts]
elite-reasoning-mcp = "core.integration.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.hatch.build.targets.sdist]
exclude = [
    "brain/",
    "_archive/",
    "uv.lock",
    "*.db",
    "*.log",
    "mcp_error.log",
    ".venv/",
    "__pycache__/",
    "*.pyc",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line-too-long — handled by formatter, not blocker
    "E701",   # multiple-statements-on-one-line — compact patterns
    "E702",   # multiple-statements-on-one-line-semicolon
    "E741",   # ambiguous-variable-name — l, O, I in math code
    "W291",   # trailing-whitespace
    "W293",   # blank-line-with-whitespace
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841", "E402"]  # tests use inline imports and temp vars

